--- a/html/memorias-de-ontem.html
+++ b/html/memorias-de-ontem.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Da Colina Kokuriko</title>
+	<title>Memórias de Ontem</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-5.jpg");
+			background-image: url("../covers/cover-18.webp");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Da Colina Kokuriko</h1>
-				<h2 lang="ja">コクリコ坂から</h2>
+				<h1>Memórias de Ontem</h1>
+				<h2 lang="ja">おもひでぽろぽろ</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-5.jpg" alt="Poster do Filme Da Colina Kokuriko">
+				<img id="poster" src="../posters/poster-18.jpg" alt="Poster do Filme Memórias de Ontem">
 				<br>
 				<br>
-				<p>Da Colina Kokuriko é um filme de animação japonês de 2011 dirigido por Goro Miyazaki, com roteiro de Hayao Miyazaki e Keiko Niwa, produzido pelo Studio Ghibli. Este é o segundo trabalho de Goro Miyazaki para o Studio Ghibli. Sua estreia na direção ocorreu em Contos de Terramar, filme de 2006.</p>
+				<p>Memórias de Ontem é um filme de animação japonesa de 1991 escrito e dirigido por Isao Takahata, baseado no mangá de 1982 do mesmo nome por Hotaru Okamoto e Yuko Tone. Foi animado pelo Studio Ghibli para Tokuma Shoten, Nippon Television Network e Hakuhodo, e distribuído pela Toho.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,11 +96,11 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>92 min</td>
+							<td>118 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Goro Miyazaki</td>
+							<td>Isao Takahata</td>
 						</tr>	
 						<tr>
 							<th>Produção</th>
@@ -108,23 +108,23 @@
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki<br>Keiko Niwa</td>
+							<td>Isao Takahata</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Masami Nagasawa<br>Junichi Okada<br>Keiko Takeshita<br>Yuriko Ishida<br>Jun Fubuki<br>Takashi Naito<br>Shunsuke Kazama<br>Nao Omori<br>Teruyuki Kagawa</td>
+							<td>Miki Imai<br>Toshiro Yanagiba<br>Yoko Honna</td>
 						</tr>
 						<tr>
 							<th>Baseado</th>
-							<td>Kokuriko-zaka kara<br>por Chizuru Takahashi<br>Tetsuro Sayama</td>
+							<td>Omoide Poro Poro<br>by Hotaru Okamoto<br>Yuko Tone</td>
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Satoshi Takebe</td>
+							<td>Katz Hoshi</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
-							<td>Atsushi Okui</td>
+							<td>Hisao Shirai</td>
 						</tr>
 						<tr>
 							<th>Edição</th>
@@ -136,19 +136,15 @@
 						</tr>
 						<tr>
 							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
-							<td>16 de julho de 2011</td>
+							<td>20 de julho de 1991</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
 							<td>Japonês</td>
 						</tr>
 						<tr>
-							<th>Orçamento</th>
-							<td>¥2,2 bilhões</td>
-						</tr>
-						<tr>
 							<th>Receita</th>
-							<td>US$61,5 milhões</td>
+							<td>¥3.18 bilhões (Japão)</td>
 						</tr>
 					</tbody>
 				</table>
@@ -156,30 +152,31 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>Yokohama, 1963. O Japão está se recuperando da devastação da Segunda Guerra Mundial e se preparando para sediar as Olimpíadas. Neste cenário de esperança e mudança, uma amizade começa a florescer entre os estudantes do ensino médio Umi e Shun. Mas um segredo oculto do passado surge para lançar uma sombra sobre o futuro e separá-los.</p>
-
-				<p>Da Colina Kokuriko não teve estreia no Brasil ou foi lançado em mídia física. A HBO, contudo, chegou a exibir algumas vezes o filme em sua grade de programação. Atualmente a animação está disponível junto a mais outros 20 filmes do Studio Ghibli na plataforma de streaming da Netflix.</p>
+				<p>Taeko é uma mulher solteira de 27 anos que se dedica apenas ao trabalho. Ela sai de sua nativa Tóquio pela primeira vez e viaja a Yamagata para visitar a família da irmã durante a colheita anual de açafrão-bastardo. Ao longo da viagem, ela começa a questionar se sua vida estressante é o que desejava quando jovem.</p>
 			</div>
 
 			<div class="div-wrap">
-				<h3 id="Critica">Produção</h3>
-				<p>Ambientado na década de 1960, Goro Miyazaki pesquisou inicialmente Yokohama, com a intenção de ser fiel aos detalhes históricos da cidade. No entanto, depois de perceber que “simplesmente encenar algo do tempo pode parecer real o suficiente, mas pode não ser necessariamente bonito”. Miyazaki decidiu mostrar o local como “cintilante e cheio de vida” do ponto de vista dos personagens. Ao projetar o Quartier Latin, Miyazaki trabalhou com os diretores de arte que adicionaram ideias sobre a “mistura de desordem nos muitos cômodos da casa” e tentaram “olhar a arquitetura do edifício, mas também lembrar os anos da faculdade e os desordem e imundície que [Miyazaki] viveu ”</p>
+				<h3 id="Critica">Produção & Crítica</h3>
+				<p>Memórias de Ontem explora um gênero tradicionalmente considerado fora do campo dos assuntos animados: um drama realista escrito para adultos, principalmente mulheres. O filme foi surpreendentemente um sucesso de bilheteria, atraindo um grande público adulto e se tornando o filme japonês de maior bilheteria de 1991 no país. Também foi bem recebido pelos críticos, com uma classificação de 100% no Rotten Tomatoes.</p>
 
-				<p>Nos anos 60 se viu um aumento crescente do ativismo estudantil e das revoltas no campus no Japão e em outras partes do mundo, que refletiu diretamente em diversas cenas do filme. Em uma entrevista à imprensa dada após o terremoto e tsunami de Tohoku em 2011, foi anunciado que a produção do filme tinha sido afetada pelos apagões ocorridos após o desastre. Apesar do atraso, a equipe conseguiu dar continuidade trabalhando em horários alternativos para finalizar o filme dentro do prazo.</p>
+				<p>A história se passa no distrito de Takase, na cidade de Yamagata, na província de Yamagata, com destaque para a Estação Takase. Embora esta tenha sido reconstruída, o cenário permanece praticamente inalterado. Durante o curso do filme, os personagens visitam locais importantes, incluindo o destino do resort de Mount Zao.</p>
+
+				<p>Diferentemente do estilo típico de animação de personagens japoneses, os personagens têm músculos e expressões faciais mais realistas devido ao diálogo ter sido gravado primeiro (a tradição no Japão é gravá-lo após a conclusão da animação) e os animadores ajustam a animação ao diálogo falado. No entanto, as cenas do passado de infância de Taeko foram animadas antes da gravação das vozes, dando um contraste sutil entre o estilo de anime de sua infância e a “realidade” adulta do enquadramento da história.</p>
+
+				<p>As cenas ambientadas em 1966 de Taeko com 10 anos, foram tiradas do material original que inspirou o filme. Takahata teve dificuldade em adaptar o mangá episódico em um longa-metragem e, portanto, ele inventou a narrativa de enquadramento em que a Taeko adulta viaja para o campo e conhece Toshio.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/6clRxNemmlm8kSfIJJtMNF?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/3TSh2VevYJEb5wfrnyHMVM?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70262786"><img class="icon" alt="Netflix" src="../icons/netflix.png">
+				<a href="https://www.netflix.com/br/title/80092922"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
-				<a href="https://tv.apple.com/br/movie/la-colina-de-las-amapolas/umc.cmc.11uuzbwzfxszmzlkqj4m1yobx?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
+				<a href="https://tv.apple.com/br/movie/memorias-de-ontem/umc.cmc.nou0dn47d0dzh45gr2kvw4ld?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
 				</a>
-
 			</div>
 		</div>
 	</main>
@@ -187,8 +184,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
-			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
