--- a/html/meus-vizinhos.html
+++ b/html/meus-vizinhos.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Da Colina Kokuriko</title>
+	<title>Meus Vizinhos Os Yamadas</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-5.jpg");
+			background-image: url("../covers/cover-22.jpg");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Da Colina Kokuriko</h1>
-				<h2 lang="ja">コクリコ坂から</h2>
+				<h1>Meus Vizinhos Os Yamadas</h1>
+				<h2 lang="ja">ホーホケキョとなりの山田くん</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-5.jpg" alt="Poster do Filme Da Colina Kokuriko">
+				<img id="poster" src="../posters/poster-22.webp" alt="Poster do Filme Meus Vizinhos Os Yamadas">
 				<br>
 				<br>
-				<p>Da Colina Kokuriko é um filme de animação japonês de 2011 dirigido por Goro Miyazaki, com roteiro de Hayao Miyazaki e Keiko Niwa, produzido pelo Studio Ghibli. Este é o segundo trabalho de Goro Miyazaki para o Studio Ghibli. Sua estreia na direção ocorreu em Contos de Terramar, filme de 2006.</p>
+				<p>	Meus Vizinhos os Yamadas é um filme japonês de animação de 1999, escrito e dirigido por Isao Takahata e produzido pelo Studio Ghibli. Diferente de outros filmes do Studio Ghibli, a animação de Takahata apresenta uma estética estilizada de tiras de quadrinhos, em relação ao estilo tradicional de animação de outras obras do estúdio.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,35 +96,39 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>92 min</td>
+							<td>104 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Goro Miyazaki</td>
+							<td>Isao Takahata</td>
 						</tr>	
 						<tr>
 							<th>Produção</th>
-							<td>Toshio Suzuki</td>
+							<td>Takashi Shoji<br>Seiichiro Ujiie</td>
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki<br>Keiko Niwa</td>
+							<td>Isao Takahata</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Masami Nagasawa<br>Junichi Okada<br>Keiko Takeshita<br>Yuriko Ishida<br>Jun Fubuki<br>Takashi Naito<br>Shunsuke Kazama<br>Nao Omori<br>Teruyuki Kagawa</td>
+							<td>Hayato Isobata<br>Masako Araki<br>Naomi Uno<br>Touru Masuoka</td>
 						</tr>
 						<tr>
-							<th>Baseado</th>
-							<td>Kokuriko-zaka kara<br>por Chizuru Takahashi<br>Tetsuro Sayama</td>
+							<th>Gênero</th>
+							<td>Comédia</td>
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Satoshi Takebe</td>
+							<td>Akiko Yano</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
 							<td>Atsushi Okui</td>
+						</tr>
+						<tr>
+							<th>Direção de arte</th>
+							<td>Yoji Takeshige<br>Naoya Tanaka</td>
 						</tr>
 						<tr>
 							<th>Edição</th>
@@ -136,7 +140,7 @@
 						</tr>
 						<tr>
 							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
-							<td>16 de julho de 2011</td>
+							<td>17 de agosto de 1999</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
@@ -144,11 +148,11 @@
 						</tr>
 						<tr>
 							<th>Orçamento</th>
-							<td>¥2,2 bilhões</td>
+							<td>¥2 bilhões</td>
 						</tr>
 						<tr>
 							<th>Receita</th>
-							<td>US$61,5 milhões</td>
+							<td>¥1,56 bilhões</td>
 						</tr>
 					</tbody>
 				</table>
@@ -156,30 +160,25 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>Yokohama, 1963. O Japão está se recuperando da devastação da Segunda Guerra Mundial e se preparando para sediar as Olimpíadas. Neste cenário de esperança e mudança, uma amizade começa a florescer entre os estudantes do ensino médio Umi e Shun. Mas um segredo oculto do passado surge para lançar uma sombra sobre o futuro e separá-los.</p>
-
-				<p>Da Colina Kokuriko não teve estreia no Brasil ou foi lançado em mídia física. A HBO, contudo, chegou a exibir algumas vezes o filme em sua grade de programação. Atualmente a animação está disponível junto a mais outros 20 filmes do Studio Ghibli na plataforma de streaming da Netflix.</p>
+				<p>O filme mostra o dia-a-dia da família Yamada, que é composta por Takashi (o pai, um trabalhador comum), Matsuko (a mãe, dona de casa), Shige (a sogra), Noboru (o filho adolescente), Nonoko (a filha criança) e Pochi (o cachorro da família). A história é dividida em quadros curtos, cada um focando algum ponto interessante do cotidiano da família, mais ou menos como se vê nas tirinhas de jornal. Trata de problemas que vemos em nossos próprios lares, como a exigência dos pais para que o filho adolescente estude mais, a mãe que não quer ser tratada como uma empregada, o pai que chega cansado demais do trabalho e tem que acordar cedo para uma reunião de negócios, o adolescente passando por crises existenciais, os pensamentos inocentes da criança.</p>
 			</div>
 
 			<div class="div-wrap">
-				<h3 id="Critica">Produção</h3>
-				<p>Ambientado na década de 1960, Goro Miyazaki pesquisou inicialmente Yokohama, com a intenção de ser fiel aos detalhes históricos da cidade. No entanto, depois de perceber que “simplesmente encenar algo do tempo pode parecer real o suficiente, mas pode não ser necessariamente bonito”. Miyazaki decidiu mostrar o local como “cintilante e cheio de vida” do ponto de vista dos personagens. Ao projetar o Quartier Latin, Miyazaki trabalhou com os diretores de arte que adicionaram ideias sobre a “mistura de desordem nos muitos cômodos da casa” e tentaram “olhar a arquitetura do edifício, mas também lembrar os anos da faculdade e os desordem e imundície que [Miyazaki] viveu ”</p>
+				<h3 id="Critica">Produção & Crítica</h3>
+				<p>Baseado no mangá yonkoma Nono-chan de Hisaichi Ishii, é o primeiro filme totalmente digital do Studio Ghibli. Takahata queria que o filme tivesse o estilo artístico das imagens em aquarela em vez de células de animação. Para conseguir isso, as técnicas tradicionais de pintura em tela foram substituídas pela tecnologia digital, tornando Meus Vizinhos os Yamadas o primeiro filme Ghibli a ter desenhos de animação pintados inteiramente em computadores.</p>
 
-				<p>Nos anos 60 se viu um aumento crescente do ativismo estudantil e das revoltas no campus no Japão e em outras partes do mundo, que refletiu diretamente em diversas cenas do filme. Em uma entrevista à imprensa dada após o terremoto e tsunami de Tohoku em 2011, foi anunciado que a produção do filme tinha sido afetada pelos apagões ocorridos após o desastre. Apesar do atraso, a equipe conseguiu dar continuidade trabalhando em horários alternativos para finalizar o filme dentro do prazo.</p>
+				<p>Apesar das críticas positivas, o filme não se saiu tão bem nas bilheterias do Japão quanto outros filmes do Studio Ghibli. Meus Vizinhos os Yamadas recebeu um prêmio de excelência em animação em 1999, no Japan Media Arts Festival.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/6clRxNemmlm8kSfIJJtMNF?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<p>A trilha sonora foi composta por Akiko Yano e é caracterizada por temas bem curtos para piano. Há também peças clássicas tocadas pela Orquestra de Câmara Filarmônica Tcheca, conduzidas por Mario Klemens. Foi lançada pela Tokuma em 1 de julho de 1999.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70262786"><img class="icon" alt="Netflix" src="../icons/netflix.png">
+				<a href="https://www.netflix.com/br/title/70035035"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
-				<a href="https://tv.apple.com/br/movie/la-colina-de-las-amapolas/umc.cmc.11uuzbwzfxszmzlkqj4m1yobx?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
-				</a>
-
 			</div>
 		</div>
 	</main>
@@ -187,8 +186,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
-			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
