--- a/html/nausicaa-do-vale-do-vento.html
+++ b/html/nausicaa-do-vale-do-vento.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Da Colina Kokuriko</title>
+	<title>Nausicaä do Vale do Vento</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-5.jpg");
+			background-image: url("../covers/cover-20.jpg");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Da Colina Kokuriko</h1>
-				<h2 lang="ja">コクリコ坂から</h2>
+				<h1>Nausicaä do Vale do Vento</h1>
+				<h2 lang="ja">風の谷のナウシカ</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-5.jpg" alt="Poster do Filme Da Colina Kokuriko">
+				<img id="poster" src="../posters/poster-20.jpg" alt="Poster do Filme Nausicaä do Vale do Vento">
 				<br>
 				<br>
-				<p>Da Colina Kokuriko é um filme de animação japonês de 2011 dirigido por Goro Miyazaki, com roteiro de Hayao Miyazaki e Keiko Niwa, produzido pelo Studio Ghibli. Este é o segundo trabalho de Goro Miyazaki para o Studio Ghibli. Sua estreia na direção ocorreu em Contos de Terramar, filme de 2006.</p>
+				<p>Nausicaä do Vale do Vento é um filme de animação japonês de 1984 do escritor, diretor e ilustrador Hayao Miyazaki, baseado em um mangá de mesmo nome publicado em 1982 nas páginas da revista Animage. O lançamento do filme se deu antes da fundação do Studio Ghibli, que posteriormente adquiriu seus direitos.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,11 +96,11 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>92 min</td>
+							<td>117 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Goro Miyazaki</td>
+							<td>Hayao Miyazaki</td>
 						</tr>	
 						<tr>
 							<th>Produção</th>
@@ -108,27 +108,31 @@
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki<br>Keiko Niwa</td>
+							<td>Hayao Miyazaki</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Masami Nagasawa<br>Junichi Okada<br>Keiko Takeshita<br>Yuriko Ishida<br>Jun Fubuki<br>Takashi Naito<br>Shunsuke Kazama<br>Nao Omori<br>Teruyuki Kagawa</td>
+							<td>Sumi Shimamoto<br>Goro Naya<br>Yoji Matsuda<br>Yoshiko Sakakibara<br>Iemasa Kayumi</td>
 						</tr>
 						<tr>
-							<th>Baseado</th>
-							<td>Kokuriko-zaka kara<br>por Chizuru Takahashi<br>Tetsuro Sayama</td>
+							<th>Gênero</th>
+							<td>Aventura<br>Fantasia Científica</td>
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Satoshi Takebe</td>
+							<td>Joe Hisaishi</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
-							<td>Atsushi Okui</td>
+							<td>Koji Shiragami<br>Yukitomo Shudo<br>Yasuhiro Shimizu<br>Mamoru Sugiura</td>
+						</tr>
+						<tr>
+							<th>Direção de arte</th>
+							<td>Mitsuki Nakamura</td>
 						</tr>
 						<tr>
 							<th>Edição</th>
-							<td>Takeshi Seyama</td>
+							<td>Tomoko Kida<br>Naoko Kaneko<br>Masatsugu Sakai</td>
 						</tr>
 						<tr>
 							<th>Companhia(s) produtora(s)</th>
@@ -136,7 +140,7 @@
 						</tr>
 						<tr>
 							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
-							<td>16 de julho de 2011</td>
+							<td>11 de março de 1984</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
@@ -144,11 +148,7 @@
 						</tr>
 						<tr>
 							<th>Orçamento</th>
-							<td>¥2,2 bilhões</td>
-						</tr>
-						<tr>
-							<th>Receita</th>
-							<td>US$61,5 milhões</td>
+							<td>¥180 milhões</td>
 						</tr>
 					</tbody>
 				</table>
@@ -156,30 +156,27 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>Yokohama, 1963. O Japão está se recuperando da devastação da Segunda Guerra Mundial e se preparando para sediar as Olimpíadas. Neste cenário de esperança e mudança, uma amizade começa a florescer entre os estudantes do ensino médio Umi e Shun. Mas um segredo oculto do passado surge para lançar uma sombra sobre o futuro e separá-los.</p>
+				<p>Após os Sete Dias de Fogo, uma guerra que destruiu a civilização humana e a maior parte do ecossistema da Terra, surge uma floresta que exala gases venenosos. Apenas insetos e um ser conhecido como Ohmu vivem por lá. Nausicaä, filha do rei do Vale do Vento, tem o estranho poder de conseguir sentir o que a floresta sente e se vê obrigada a sair em uma jornada para tentar evitar outra guerra devastadora.</p>
 
-				<p>Da Colina Kokuriko não teve estreia no Brasil ou foi lançado em mídia física. A HBO, contudo, chegou a exibir algumas vezes o filme em sua grade de programação. Atualmente a animação está disponível junto a mais outros 20 filmes do Studio Ghibli na plataforma de streaming da Netflix.</p>
+				<p>A princesa Nausicaä é carismática, jovem e corajosa. Seu nome vem da personagem Nausicaä da Odisséia. Parte de sua personalidade veio do conto do folclore japonês A princesa que amava insetos.</p>
 			</div>
 
 			<div class="div-wrap">
-				<h3 id="Critica">Produção</h3>
-				<p>Ambientado na década de 1960, Goro Miyazaki pesquisou inicialmente Yokohama, com a intenção de ser fiel aos detalhes históricos da cidade. No entanto, depois de perceber que “simplesmente encenar algo do tempo pode parecer real o suficiente, mas pode não ser necessariamente bonito”. Miyazaki decidiu mostrar o local como “cintilante e cheio de vida” do ponto de vista dos personagens. Ao projetar o Quartier Latin, Miyazaki trabalhou com os diretores de arte que adicionaram ideias sobre a “mistura de desordem nos muitos cômodos da casa” e tentaram “olhar a arquitetura do edifício, mas também lembrar os anos da faculdade e os desordem e imundície que [Miyazaki] viveu ”</p>
-
-				<p>Nos anos 60 se viu um aumento crescente do ativismo estudantil e das revoltas no campus no Japão e em outras partes do mundo, que refletiu diretamente em diversas cenas do filme. Em uma entrevista à imprensa dada após o terremoto e tsunami de Tohoku em 2011, foi anunciado que a produção do filme tinha sido afetada pelos apagões ocorridos após o desastre. Apesar do atraso, a equipe conseguiu dar continuidade trabalhando em horários alternativos para finalizar o filme dentro do prazo.</p>
+				<h3 id="Critica">Contexto</h3>
+				<p>Hayao Miyazaki prima pelos detalhes. A animação encanta pela aparente simplicidade das linhas e dos movimentos, algo que certamente tem muito de complexo tecnicamente. Inovando ao mostrar uma protagonista feminina mais destemida que os homens em cena, o japonês faz ao mesmo tempo um belíssimo libelo ecológico – denunciando a ignorância da nossa raça a respeito de determinados sinais emitidos pela natureza – e afronta a sanha expansionista. Assim sendo, Nausicaä do Vale do Vento é um filme extremamente atual, por abordar questões ainda latentes e urgentes. A coragem da menina é o estandarte de um novo mundo que pode surgir, desde que as pessoas parem de digladiar, que estejam abertas ao meio circundante e à sua sabedoria nem sempre compreendida, e que valorizem a essência. Exemplo disso, ao contrário do que pensam todos, os Ohmus valem bem mais do que suas carapaças mortas, matéria-prima de armas e outros instrumentos de ferir.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/6clRxNemmlm8kSfIJJtMNF?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/6cmEkUHUP69COQ0MDPhJN7?utm_source=generator"   allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70262786"><img class="icon" alt="Netflix" src="../icons/netflix.png">
+				<a href="https://www.netflix.com/br/title/70019062"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
-				<a href="https://tv.apple.com/br/movie/la-colina-de-las-amapolas/umc.cmc.11uuzbwzfxszmzlkqj4m1yobx?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
+				<a href="https://tv.apple.com/br/movie/nausicaa---prinsessen-fra-vindens-dal/umc.cmc.5a19fikldgwe4cnl8smazz6tx?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
 				</a>
-
 			</div>
 		</div>
 	</main>
@@ -187,8 +184,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
-			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
