--- a/html/o-castelo-no-ceu.html
+++ b/html/o-castelo-no-ceu.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Da Colina Kokuriko</title>
+	<title>O Castelo no Céu</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-5.jpg");
+			background-image: url("../covers/cover-13.jpg");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Da Colina Kokuriko</h1>
-				<h2 lang="ja">コクリコ坂から</h2>
+				<h1>O Castelo no Céu</h1>
+				<h2 lang="ja">天空の城ラピュタ</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-5.jpg" alt="Poster do Filme Da Colina Kokuriko">
+				<img id="poster" src="../posters/poster-13.jpg" alt="Poster do Filme O Castelo no Céu">
 				<br>
 				<br>
-				<p>Da Colina Kokuriko é um filme de animação japonês de 2011 dirigido por Goro Miyazaki, com roteiro de Hayao Miyazaki e Keiko Niwa, produzido pelo Studio Ghibli. Este é o segundo trabalho de Goro Miyazaki para o Studio Ghibli. Sua estreia na direção ocorreu em Contos de Terramar, filme de 2006.</p>
+				<p>O Castelo no Céu é um filme de animação japonês escrito e dirigido por Hayao Miyazaki, em 1986. Foi o primeiro filme de animação produzido oficialmente pelo Studio Ghibli. O filme retrata as aventuras de um menino e uma menina tentando proteger um cristal mágico de um grupo de agentes militares, enquanto procuram um lendário castelo flutuante. O filme foi distribuído pela Toei Company.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,39 +96,43 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>92 min</td>
+							<td>124 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Goro Miyazaki</td>
+							<td>Hayao Miyazaki</td>
 						</tr>	
 						<tr>
 							<th>Produção</th>
-							<td>Toshio Suzuki</td>
+							<td>Isao Takahata</td>
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki<br>Keiko Niwa</td>
+							<td>Hayao Miyazaki</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Masami Nagasawa<br>Junichi Okada<br>Keiko Takeshita<br>Yuriko Ishida<br>Jun Fubuki<br>Takashi Naito<br>Shunsuke Kazama<br>Nao Omori<br>Teruyuki Kagawa</td>
+							<td>Mayumi Tanaka<br>Keiko Yokozawa<br>Kotoe Hatsui<br>Minori Terada</td>
 						</tr>
 						<tr>
-							<th>Baseado</th>
-							<td>Kokuriko-zaka kara<br>por Chizuru Takahashi<br>Tetsuro Sayama</td>
+							<th>Gênero</th>
+							<td>Aventura</td>
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Satoshi Takebe</td>
+							<td>Joe Hisaishi</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
-							<td>Atsushi Okui</td>
+							<td>Hirokata Takahashi</td>
+						</tr>
+						<tr>
+							<th>Direção de arte</th>
+							<td>Toshio Nozaki<br>Nizo Yamamoto</td>
 						</tr>
 						<tr>
 							<th>Edição</th>
-							<td>Takeshi Seyama</td>
+							<td>Takeshi Seyama<br>Yoshihiro Kasahara</td>
 						</tr>
 						<tr>
 							<th>Companhia(s) produtora(s)</th>
@@ -136,7 +140,7 @@
 						</tr>
 						<tr>
 							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
-							<td>16 de julho de 2011</td>
+							<td>2 de agosto de 1986</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
@@ -144,11 +148,11 @@
 						</tr>
 						<tr>
 							<th>Orçamento</th>
-							<td>¥2,2 bilhões</td>
+							<td>¥500 milhões</td>
 						</tr>
 						<tr>
 							<th>Receita</th>
-							<td>US$61,5 milhões</td>
+							<td>US$15,5 milhões</td>
 						</tr>
 					</tbody>
 				</table>
@@ -156,30 +160,29 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>Yokohama, 1963. O Japão está se recuperando da devastação da Segunda Guerra Mundial e se preparando para sediar as Olimpíadas. Neste cenário de esperança e mudança, uma amizade começa a florescer entre os estudantes do ensino médio Umi e Shun. Mas um segredo oculto do passado surge para lançar uma sombra sobre o futuro e separá-los.</p>
+				<p>Sheeta cai misteriosamente do céu nos braços de Pazu, um garoto que vive e trabalha em uma pequena cidade nas montanhas. Este encontro leva ambos a uma série de aventuras causadas pela perseguição de piratas do ar e do exército a Sheeta, que resulta numa busca pela verdadeira identidade dela e por Laputa, um misterioso castelo no céu.</p>
 
-				<p>Da Colina Kokuriko não teve estreia no Brasil ou foi lançado em mídia física. A HBO, contudo, chegou a exibir algumas vezes o filme em sua grade de programação. Atualmente a animação está disponível junto a mais outros 20 filmes do Studio Ghibli na plataforma de streaming da Netflix.</p>
+				<p>À medida que a trama se desenvolve, os seus chefes percebem seu talento inato e tomam a decisão de lhe dar total liberdade para construir qualquer categoria de aeronave. O filme narra os acontecimentos mais representativos e influentes de toda a sua existência, recriando o terremoto que ocorreu em Kanto, o tempo marcado pela crise e dificuldades mundiais, a propagação de diferentes doenças por toda a sociedade e o envolvimento do Império do Sol Nascente na Segunda Guerra Mundial.</p>
 			</div>
 
 			<div class="div-wrap">
-				<h3 id="Critica">Produção</h3>
-				<p>Ambientado na década de 1960, Goro Miyazaki pesquisou inicialmente Yokohama, com a intenção de ser fiel aos detalhes históricos da cidade. No entanto, depois de perceber que “simplesmente encenar algo do tempo pode parecer real o suficiente, mas pode não ser necessariamente bonito”. Miyazaki decidiu mostrar o local como “cintilante e cheio de vida” do ponto de vista dos personagens. Ao projetar o Quartier Latin, Miyazaki trabalhou com os diretores de arte que adicionaram ideias sobre a “mistura de desordem nos muitos cômodos da casa” e tentaram “olhar a arquitetura do edifício, mas também lembrar os anos da faculdade e os desordem e imundície que [Miyazaki] viveu ”</p>
+				<h3 id="Critica">Produção & Crítica</h3>
+				<p>O Castelo no Céu recebeu a premiação Anime Grand Prix, realizada pela revista Animage, em 1986. O filme foi bem recebido pela crítica e arrecadou mais de 15 milhões de dólares em bilheteria e um total aproximado de 157 milhões de dólares, somando a a arrecadação de bilheteria, venda de vídeos caseiros e da trilha sonora. Nas pesquisas japonesas, foi votado como o segundo melhor filme de animação em 2006 no Japan Media Arts Festival e obteve o primeiro lugar, em 2008, em uma pesquisa de audiência da Oricon Inc. Considerado um marco no gênero steampunk, O Castelo no Céu tem forte influência na cultura popular japonesa e tem sido fonte de inspiração para fillmes e jogos, tanto no Japão quanto internacionalmente.</p>
 
-				<p>Nos anos 60 se viu um aumento crescente do ativismo estudantil e das revoltas no campus no Japão e em outras partes do mundo, que refletiu diretamente em diversas cenas do filme. Em uma entrevista à imprensa dada após o terremoto e tsunami de Tohoku em 2011, foi anunciado que a produção do filme tinha sido afetada pelos apagões ocorridos após o desastre. Apesar do atraso, a equipe conseguiu dar continuidade trabalhando em horários alternativos para finalizar o filme dentro do prazo.</p>
+				<p>Na série de anime Mirai Shōnen Konan (1978), Miyazaki apresentou uma soma de elementos que seguidamente adaptou em O Castelo no Céu; a exemplo os personagens que serviram como base para Pazu e Sheeta, além de temas que definiram o projeto. O nome "Laputa" (ラピュタ Rapyuta) é derivado do romance As Viagens de Gulliver, de Jonathan Swift, onde também é usada para descrever uma ilha flutuante. De acordo com Anthony Lioi, há certa semelhança entre ambos, pois a superioridade tecnológica da ilha é utilizada para fins políticos.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/6clRxNemmlm8kSfIJJtMNF?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/playlist/2SKsrmhs7Qqm3012D36JnU?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70262786"><img class="icon" alt="Netflix" src="../icons/netflix.png">
+				<a href="https://www.netflix.com/br/title/60027393"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
-				<a href="https://tv.apple.com/br/movie/la-colina-de-las-amapolas/umc.cmc.11uuzbwzfxszmzlkqj4m1yobx?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
+				<a href="https://tv.apple.com/br/movie/el-castillo-en-el-cielo/umc.cmc.516swa7pdvopljazl2r52h72e?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
 				</a>
-
 			</div>
 		</div>
 	</main>
@@ -187,8 +190,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
-			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
