--- a/html/o-reino-dos-gatos.html
+++ b/html/o-reino-dos-gatos.html
@@ -37,7 +37,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap" rel="stylesheet">
 
 	<!-- Css e JavaScript -->
-	<link href="../css/filmes.css" rel="stylesheet">
+	<link href="../css/style-filmes.css" rel="stylesheet">
 	<link href="../assets/bootstrap.min.css" rel="stylesheet">
 	<script src="../assets/bootstrap.bundle.min.js"></script>
 
@@ -63,7 +63,7 @@
 					<div class="container-out">
 					    <div class="search-container">
 					        <form id="search-engine">
-						        <input id="search" type="text" onblur="desfocus()" autocomplete="off">
+						        <input id="search" type="text" autocomplete="off" onblur="desfocus()" autofocus name="filmes">
 						        <input id="search_submit" type="submit">
 						        <div id="search-results"></div>
 					        </form>				     
@@ -195,7 +195,6 @@
 	</footer>
 
 	<script src="../js/javascript.js"></script>
-	<script src="../js/lista.js"></script>
 </body>
 </html> 
 
