--- a/html/sobre.html
+++ b/html/sobre.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Eu Posso Ouvir o Oceano</title>
+	<title>Sobre</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,14 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-9.jpg");
+			background-image: url("../imagens/capa.png");
+		}
+		a{
+			text-decoration: none;
+			color: white;
+		}
+		a:hover{
+			color: white;
 		}
 	</style>
 
@@ -73,8 +80,7 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Eu Posso Ouvir o Oceano</h1>
-				<h2 lang="ja">海がきこえる</h2>
+				<h1>Studio Ghibli FanPage</h1>
 			</div>
 			
 		</header>
@@ -84,10 +90,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-9.jpg" alt="Poster do Filme Eu Posso Ouvir o Oceano">
-				<br>
-				<br>
-				<p>Ambientado na cidade de Kochi, na ilha japonesa de Shikoku, a história trata de um triângulo amoroso que se desenvolve entre dois melhores amigos e uma nova garota que é transferida para uma escola de Tóquio.</p>
+				<h3>Studio Ghibli</h3>
+				<p>	O Studio Ghibli é um estúdio de animação japonês, sediado em Koganei, Tóquio. Fundado em 1985, o estúdio já produziu 23 longas de animação, sendo o primeiro O Castelo no Céu (1986) e o mais recente Aya e a Bruxa (2022).</p>
+
+				<p>O Studio Ghibli foi fundado em 1985 por Hayao Miyazaki, Isao Takahata, Toshio Suzuki e Yasuyoshi Tokuma, logo após o sucesso de Nausicaä do Vale do Vento, no ano anterior. O estúdio lançou seu primeiro filme, O Castelo no Céu, no ano seguinte. O logotipo da empresa é o Totoro, o personagem do filme Meu Amigo Totoro, lançado em 1988. Com exceção de seis produções, todos os filmes do estúdio foram dirigidos por Hayao Miyazaki e Isao Takahata. Toshio Suzuki, por sua vez, é o produtor da maioria deles. Em 2001, o Museu Ghibli, um museu dedicado as obras do estúdio, foi inaugurado.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -95,84 +101,38 @@
 				<table class="ghibli-table">
 					<tbody>
 						<tr>
-							<th>Duração</th>
-							<td>72 min</td>
+							<th>Fundação</th>
+							<td>15 de junho de 1985</td>
 						</tr>	
 						<tr>
-							<th>Direção</th>
-							<td>Tomomi Mochizuki</td>
+							<th>Fundadores</th>
+							<td>Isao Takahata<br>Hayao Miyazaki<br>Toshio Suzuki<br>Yasuyoshi Tokuma</td>
 						</tr>	
 						<tr>
-							<th>Produção</th>
-							<td>Nozomu Takahashi<br>Toshio Suzuki<br>Seiji Okuda</td>
+							<th>Sede</th>
+							<td>Koganei, Tóquio, Japão.</td>
 						</tr>
 						<tr>
-							<th>Roteiro</th>
-							<td>Kaori Nakamura</td>
+							<th>Presidente</th>
+							<td>Kiyofumi Nakajima</td>
 						</tr>
 						<tr>
-							<th>Elenco</th>
-							<td>Nobuo Tobita<br>Toshihiko Seki<br>Yuko Sakamoto</td>
-						</tr>
-						<tr>
-							<th>Baseado</th>
-							<td lang="ja">Umi ga Kikoeru,<br> de Saeko Himuro</td>
-						</tr>
-						<tr>
-							<th>Gênero</th>
-							<td>Drama</td>
-						</tr>
-						<tr>
-							<th>Música</th>
-							<td>Shigeru Nagata</td>
-						</tr>
-						<tr>
-							<th>Cinematografia</th>
-							<td>Atsushi Okui</td>
-						</tr>
-						<tr>
-							<th>Edição</th>
-							<td>Takeshi Seyama</td>
-						</tr>
-						<tr>
-							<th>Companhia(s) produtora(s)</th>
-							<td>Studio Ghibli</td>
-						</tr>
-						<tr>
-							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
-							<td>5 de maio de 1993</td>
-						</tr>
-						<tr>
-							<th>Idioma</th>
-							<td>Japonês</td>
+							<th>Site oficial</th>
+							<td><a href="https://www.ghibli.jp/">ghibli.jp</a></td>
 						</tr>
 					</tbody>
 				</table>
 			</div>	
 
-			<div class="div-wrap">
-				<h3 id="sinopse">Sinopse</h3>
-				<p>Após o divórcio dos pais de Rikako, uma estudante de Tóquio, é transferida para um colégio de Kochi, uma cidade litorânea remota da capital. Ela é inteligente, se dedica muito aos estudos e aos esportes. Mas não consegue se adaptar à vida social da escola. No mesmo colégio estão Taku Morisaki e Yutaka Matsuno, que sempre foram melhores amigos, no entanto, Rikako ficará entre os dois.</p>
-			</div>
+			<div class="div-wrap2">
+				<h3 id="sinopse">História</h3>
+				<p>“O Quente Vento do Deserto do Saara”. Para muitos, essa frase pode não fazer sentido algum, mas para Hayao Miyazaki, esse vento que se chama Ghibli seria aquele mudaria para sempre a história da animação mundial.</p>
 
-			<div class="div-wrap">
-				<h3 id="Critica">Produção & Crítica</h3>
-				<p>Esta é a primeira animação do Studio Ghibli dirigida por outra pessoa que não seja Hayao Miyazaki ou Isao Takahata. Tomomi Mochizuki, que tinha 34 anos na época, foi chamado para dirigir o filme. O filme foi uma tentativa de fazer uma animação única pelos jovens membros da equipe, principalmente em seus 20 e 30 anos. Seu lema era produzir “rápido, barato e com qualidade”, mas acabou não dando muito certo no final por causa do orçamento e da programação.</p>
+				<p>Graças ao sucesso alcançado por Nausicaä do Vale do Vento em 1984, no ano seguinte, em 1985, nascia o Studio Ghibli. Sua história, porém, começa 30 anos antes com o encontro de Hayao Miyazaki e Isao Takahata, futuros pais do estúdio.</p>
 
-				<p>	O livro homônimo no qual o filme é baseado foi ilustrado por Katsuya Kondo, que trabalhou em diversas animações do Studio Ghibli.A obra nunca foi lançada no Brasil, contudo, atualmente está disponível em versão legendada junto a mais outros 20 filmes do Studio Ghibli na plataforma de streaming Netflix.</p>
-			</div>
-
-			<div class="div-wrap">
-				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/6nuyCZwPP0gdYpdoNCfhVU?utm_source=generator" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-			</div>
-
-			<div class="div-wrap">
-				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/80158668"><img class="icon" alt="Netflix" src="../icons/netflix.png">
-				</a>
-				<a href="https://tv.apple.com/br/movie/aaltojen-kuohu/umc.cmc.1hrtsx1rgj0c4uyr7ksmhptvc?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
-				</a>
+				<p>Em 1974 os dois se encontravam durante a produção de um anime de grande sucesso no mundo inteiro – inclusive no Brasil – Heidi. Enquanto Isao Takahata dirigia as séries, Hayao Miyazaki fazia um trabalho sobre-humano para conseguir desenhar o layout de cada episódio detalhadamente.</p>
+				<p>Isso fez com que os dois percebessem que para fazer as animações de alta qualidade, como desejavam, precisariam de um tipo de mídia onde os prazos não fossem tão apertados como são nas séries de televisão. Foi assim que surgiu a ideia da criação de um estúdio para produzir filmes cuidadosamente desenhados, com enredo e qualidade impecáveis, e o mais importante, de seu próprio jeito.</p>
+				<br>
 			</div>
 		</div>
 	</main>
@@ -180,8 +140,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
-			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
