--- a/html/o-tumulo-dos-vagalumes.html
+++ b/html/o-tumulo-dos-vagalumes.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Da Colina Kokuriko</title>
+	<title>O Túmulo dos Vagalumes</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-5.jpg");
+			background-image: url("../covers/cover-21.jpg");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Da Colina Kokuriko</h1>
-				<h2 lang="ja">コクリコ坂から</h2>
+				<h1>O Túmulo dos Vagalumes</h1>
+				<h2 lang="ja">火垂るの墓</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-5.jpg" alt="Poster do Filme Da Colina Kokuriko">
+				<img id="poster" src="../posters/poster-21.jpg" alt="Poster do Filme O Túmulo dos Vagalumes">
 				<br>
 				<br>
-				<p>Da Colina Kokuriko é um filme de animação japonês de 2011 dirigido por Goro Miyazaki, com roteiro de Hayao Miyazaki e Keiko Niwa, produzido pelo Studio Ghibli. Este é o segundo trabalho de Goro Miyazaki para o Studio Ghibli. Sua estreia na direção ocorreu em Contos de Terramar, filme de 2006.</p>
+				<p>Túmulo dos Vagalumes é um filme de guerra animado japonês de 1988 baseado no conto semi-autobiográfico de mesmo nome de Akiyuki Nosaka, publicado em 1967. O filme foi escrito e dirigido por Isao Takahata e animado pelo Studio Ghibli.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,11 +96,11 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>92 min</td>
+							<td>89 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Goro Miyazaki</td>
+							<td>Isao Takahata</td>
 						</tr>	
 						<tr>
 							<th>Produção</th>
@@ -108,23 +108,27 @@
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki<br>Keiko Niwa</td>
+							<td>Isao Takahata</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Masami Nagasawa<br>Junichi Okada<br>Keiko Takeshita<br>Yuriko Ishida<br>Jun Fubuki<br>Takashi Naito<br>Shunsuke Kazama<br>Nao Omori<br>Teruyuki Kagawa</td>
+							<td>Tsutomu Tatsumi<br>Ayano Shiraishi<br>Yoshiko Shinohara<br>Akemi Yamaguchi</td>
 						</tr>
 						<tr>
-							<th>Baseado</th>
-							<td>Kokuriko-zaka kara<br>por Chizuru Takahashi<br>Tetsuro Sayama</td>
+							<th>Gênero</th>
+							<td>Guerra</td>
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Satoshi Takebe</td>
+							<td>Michio Mamiya</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
-							<td>Atsushi Okui</td>
+							<td>Nobuo Koyama</td>
+						</tr>
+						<tr>
+							<th>Direção de arte</th>
+							<td>Nizo Yamamoto</td>
 						</tr>
 						<tr>
 							<th>Edição</th>
@@ -136,19 +140,11 @@
 						</tr>
 						<tr>
 							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
-							<td>16 de julho de 2011</td>
+							<td>16 de abril de 1988</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
 							<td>Japonês</td>
-						</tr>
-						<tr>
-							<th>Orçamento</th>
-							<td>¥2,2 bilhões</td>
-						</tr>
-						<tr>
-							<th>Receita</th>
-							<td>US$61,5 milhões</td>
 						</tr>
 					</tbody>
 				</table>
@@ -156,30 +152,18 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>Yokohama, 1963. O Japão está se recuperando da devastação da Segunda Guerra Mundial e se preparando para sediar as Olimpíadas. Neste cenário de esperança e mudança, uma amizade começa a florescer entre os estudantes do ensino médio Umi e Shun. Mas um segredo oculto do passado surge para lançar uma sombra sobre o futuro e separá-los.</p>
-
-				<p>Da Colina Kokuriko não teve estreia no Brasil ou foi lançado em mídia física. A HBO, contudo, chegou a exibir algumas vezes o filme em sua grade de programação. Atualmente a animação está disponível junto a mais outros 20 filmes do Studio Ghibli na plataforma de streaming da Netflix.</p>
+				<p>Os irmãos Setsuko e Seita vivem no Japão em meio a Segunda Guerra. Após a morte da mãe num bombardeio americano e a convocação do pai para a Guerra, eles vão morar com alguns parentes. Insatisfeitos, saem da cidade e acabam num abrigo isolado na floresta, onde lutam contra a fome e as doenças e se divertem com as luzes dos vagalumes.</p>
 			</div>
 
 			<div class="div-wrap">
-				<h3 id="Critica">Produção</h3>
-				<p>Ambientado na década de 1960, Goro Miyazaki pesquisou inicialmente Yokohama, com a intenção de ser fiel aos detalhes históricos da cidade. No entanto, depois de perceber que “simplesmente encenar algo do tempo pode parecer real o suficiente, mas pode não ser necessariamente bonito”. Miyazaki decidiu mostrar o local como “cintilante e cheio de vida” do ponto de vista dos personagens. Ao projetar o Quartier Latin, Miyazaki trabalhou com os diretores de arte que adicionaram ideias sobre a “mistura de desordem nos muitos cômodos da casa” e tentaram “olhar a arquitetura do edifício, mas também lembrar os anos da faculdade e os desordem e imundície que [Miyazaki] viveu ”</p>
+				<h3 id="Critica">Produção & Crítica</h3>
+				<p>O filme é amplamente aclamado pela crítica. Por conta dos direitos da publicação serem da editora Shinchosha, torna este o único filme do Studio Ghibli sob a propriedade Tokuma Shoten, que não teve nenhum envolvimento na produção.</p>
 
-				<p>Nos anos 60 se viu um aumento crescente do ativismo estudantil e das revoltas no campus no Japão e em outras partes do mundo, que refletiu diretamente em diversas cenas do filme. Em uma entrevista à imprensa dada após o terremoto e tsunami de Tohoku em 2011, foi anunciado que a produção do filme tinha sido afetada pelos apagões ocorridos após o desastre. Apesar do atraso, a equipe conseguiu dar continuidade trabalhando em horários alternativos para finalizar o filme dentro do prazo.</p>
-			</div>
+				<p>Akiyuki Nosaka, autor do conto Hotaru no Haka, afirmou ter recebido muitas propostas para adaptações cinematográficas em live-action do seu conto. Nosaka argumentou que "era impossível criar à terra árida e queimada que deveria ser o cenário da história", e que atores infantis não seriam capazes de interpretar os personagens de forma convincente. O autor ficou surpreso quando uma versão animada foi oferecida, e após ver alguns storyboards, Nosaka concluiu que não era possível que tal história tivesse sido feita por qualquer outro método que não fosse a animação, e expressou surpresa pela precisão com que os arrozais e a paisagem da cidade foram retratadas.</p>
+				
+				<p>Isao Takahata viu-se obrigado a fazer o filme depois de ver como o personagem principal, Seita, era o único [na obra] do nono grau em tempo de guerra. Takahata explicou que qualquer história de guerra (animada ou não) tende a ser comovente e que os jovens desenvolvem um "complexo de inferioridade", onde percebem que as pessoas em épocas de conflitos bélicos eram nobres e mais maduras, e, o público acredita que a história não tem nada a ver com eles, e o diretor queria dissipar essa mentalidade.] Sobre desenhar os personagens principais, o diretor disse que estava com dificuldade com Seita, pois nunca havia retratado um garoto com menos de cinco anos, porém, afirmou que o filme é do ponto de vista de Seita.</p>
 
-			<div class="div-wrap">
-				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/6clRxNemmlm8kSfIJJtMNF?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-			</div>
-
-			<div class="div-wrap">
-				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70262786"><img class="icon" alt="Netflix" src="../icons/netflix.png">
-				</a>
-				<a href="https://tv.apple.com/br/movie/la-colina-de-las-amapolas/umc.cmc.11uuzbwzfxszmzlkqj4m1yobx?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
-				</a>
-
+				<p>Takahata disse haver considerado a utilização de métodos de animação não tradicionais, tendo dificuldade em esboçar o lugar retratado da obra, pois na animação japonesa "não é permitido representar o Japão de uma forma realista". Os animadores viajavam para alguns países para saber como os retratar. A maioria das ilustrações do filme são em marrom, ao invés do habitual preto; os contornos pretos só foram usados quando era absolutamente necessário, e isto foi feito para dar ao filme uma sensação de suavidade, segundo Michiyo Yasuda.</p>
 			</div>
 		</div>
 	</main>
@@ -187,8 +171,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
-			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
