--- a/html/pompoko.html
+++ b/html/pompoko.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Da Colina Kokuriko</title>
+	<title>Pom Poko: A Grande Batalha dos Guaxinins</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-5.jpg");
+			background-image: url("../covers/cover-16.jpg");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Da Colina Kokuriko</h1>
-				<h2 lang="ja">コクリコ坂から</h2>
+				<h1>Pom Poko: A Grande Batalha dos Guaxinins</h1>
+				<h2 lang="ja">平成狸合戦ぽんぽこ</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-5.jpg" alt="Poster do Filme Da Colina Kokuriko">
+				<img id="poster" src="../posters/poster-16.jpg" alt="Poster do Filme Pom Poko: A Grande Batalha dos Guaxinins">
 				<br>
 				<br>
-				<p>Da Colina Kokuriko é um filme de animação japonês de 2011 dirigido por Goro Miyazaki, com roteiro de Hayao Miyazaki e Keiko Niwa, produzido pelo Studio Ghibli. Este é o segundo trabalho de Goro Miyazaki para o Studio Ghibli. Sua estreia na direção ocorreu em Contos de Terramar, filme de 2006.</p>
+				<p>Pom Poko – A Grande Batalha dos Guaxinins, foi o oitavo filme japonês de animação produzido pelo Studio Ghibli e tem roteiro e direção por Isao Takahata. Baseado no folclore japonês, os tanukis (animais asiáticos similares aos guaxinins) são retratados como uma espécie mística, travessa e alegre, mestre no disfarce e na troca de formas.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,11 +96,11 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>92 min</td>
+							<td>119 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Goro Miyazaki</td>
+							<td>Isao Takahata</td>
 						</tr>	
 						<tr>
 							<th>Produção</th>
@@ -108,23 +108,35 @@
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki<br>Keiko Niwa</td>
+							<td>Isao Takahata</td>
+						</tr>
+						<tr>
+							<th>Produção Executiva</th>
+							<td>Hayao Miyazaki</td>
+						</tr>
+						<tr>
+							<th>Design de Personagem</th>
+							<td>Shinji Otsuka</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Masami Nagasawa<br>Junichi Okada<br>Keiko Takeshita<br>Yuriko Ishida<br>Jun Fubuki<br>Takashi Naito<br>Shunsuke Kazama<br>Nao Omori<br>Teruyuki Kagawa</td>
+							<td>Yuriko Ishida<br>Shigeru Izumiya<br>Akira Kamiya<br>Hayashiya Shozo IX<br>Megumi Hayashibara</td>
 						</tr>
 						<tr>
-							<th>Baseado</th>
-							<td>Kokuriko-zaka kara<br>por Chizuru Takahashi<br>Tetsuro Sayama</td>
+							<th>Gênero</th>
+							<td>Animação<br>Comédia Dramática<br>Fantasia<br>Kemono</td>
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Satoshi Takebe</td>
+							<td>Koryu<br>Manto Watanobe<br>Yoko Ino<br>Masaru Goto<br>Ryojiro Furusawa<br>Yakusa Gakudan<br>Shang Shang Typhoon</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
-							<td>Atsushi Okui</td>
+							<td>Kazuo Oga</td>
+						</tr>
+						<tr>
+							<th>Direção de arte</th>
+							<td>Kazuo Oga</td>
 						</tr>
 						<tr>
 							<th>Edição</th>
@@ -136,19 +148,11 @@
 						</tr>
 						<tr>
 							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
-							<td>16 de julho de 2011</td>
+							<td>16 de julho de 1994</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
 							<td>Japonês</td>
-						</tr>
-						<tr>
-							<th>Orçamento</th>
-							<td>¥2,2 bilhões</td>
-						</tr>
-						<tr>
-							<th>Receita</th>
-							<td>US$61,5 milhões</td>
 						</tr>
 					</tbody>
 				</table>
@@ -156,30 +160,31 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>Yokohama, 1963. O Japão está se recuperando da devastação da Segunda Guerra Mundial e se preparando para sediar as Olimpíadas. Neste cenário de esperança e mudança, uma amizade começa a florescer entre os estudantes do ensino médio Umi e Shun. Mas um segredo oculto do passado surge para lançar uma sombra sobre o futuro e separá-los.</p>
+				<p>	Os guaxinins das colinas de Tama estão sendo expulsos de suas casas pelo rápido desenvolvimento de casas e shoppings. À medida que fica mais difícil encontrar comida e abrigo, eles decidem se unir e revidar.</p>
 
-				<p>Da Colina Kokuriko não teve estreia no Brasil ou foi lançado em mídia física. A HBO, contudo, chegou a exibir algumas vezes o filme em sua grade de programação. Atualmente a animação está disponível junto a mais outros 20 filmes do Studio Ghibli na plataforma de streaming da Netflix.</p>
+				<p>Eles praticam e aperfeiçoam a antiga arte de transformação até que possam aparecer como humanos. De maneiras muitas vezes hilárias, os guaxinins usam seus poderes para tentar assustar o avanço da civilização. Mas será o suficiente? Ou os guaxinins aprenderão a viver em equilíbrio com o mundo moderno?</p>
+
+				<p>Divertidos e carinhosos, usam a metamorfose para se transformarem em quase tudo. Seus rivais são kitsune (raposas) e outros metamorfos. Visualmente, os tanukis neste filme foram retratados em três maneiras, em vários momentos como: animais realistas, antropomórficos, animais que ocasionalmente usam roupas. Algumas características foram parcialmente inspiradas do mangá de Shigeru Sugiura.</p>
+
+				<p>Os testículos proeminentes são parte integrante do folclore tanuki, e eles são mostrados ao longo do filme, e também usados com frequência em sua mudança de forma.</p>
 			</div>
 
 			<div class="div-wrap">
-				<h3 id="Critica">Produção</h3>
-				<p>Ambientado na década de 1960, Goro Miyazaki pesquisou inicialmente Yokohama, com a intenção de ser fiel aos detalhes históricos da cidade. No entanto, depois de perceber que “simplesmente encenar algo do tempo pode parecer real o suficiente, mas pode não ser necessariamente bonito”. Miyazaki decidiu mostrar o local como “cintilante e cheio de vida” do ponto de vista dos personagens. Ao projetar o Quartier Latin, Miyazaki trabalhou com os diretores de arte que adicionaram ideias sobre a “mistura de desordem nos muitos cômodos da casa” e tentaram “olhar a arquitetura do edifício, mas também lembrar os anos da faculdade e os desordem e imundície que [Miyazaki] viveu ”</p>
+				<h3 id="Critica">Crítica</h3>
+				<p>Pom Poko foi o filme japonês número um no mercado doméstico em 1994, ganhando 2,63 bilhões de ienes em receita de distribuição e arrecadando 4,47 bilhões de dólares em receita total de bilheteria.</p>
 
-				<p>Nos anos 60 se viu um aumento crescente do ativismo estudantil e das revoltas no campus no Japão e em outras partes do mundo, que refletiu diretamente em diversas cenas do filme. Em uma entrevista à imprensa dada após o terremoto e tsunami de Tohoku em 2011, foi anunciado que a produção do filme tinha sido afetada pelos apagões ocorridos após o desastre. Apesar do atraso, a equipe conseguiu dar continuidade trabalhando em horários alternativos para finalizar o filme dentro do prazo.</p>
+				<p>Foi escolhida como a inscrição japonesa para o Oscar de Melhor Filme em Língua Estrangeira naquele ano. Ganhou Melhor Filme de Animação no 49º Mainichi Film Awards.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/6clRxNemmlm8kSfIJJtMNF?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/7tQlktNddJ8Qjbdi2Hi2mI?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70262786"><img class="icon" alt="Netflix" src="../icons/netflix.png">
+				<a href="https://www.netflix.com/br/title/70035036"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
-				<a href="https://tv.apple.com/br/movie/la-colina-de-las-amapolas/umc.cmc.11uuzbwzfxszmzlkqj4m1yobx?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
-				</a>
-
 			</div>
 		</div>
 	</main>
@@ -187,8 +192,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
-			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
