--- a/html/ponyo.html
+++ b/html/ponyo.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>O Mundo dos Pequeninos</title>
+	<title>Ponyo: Uma Amizade que Veio do Mar</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-8.jpg");
+			background-image: url("../covers/cover-12.jpg");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>O Mundo dos Pequeninos</h1>
-				<h2 lang="ja">借りぐらしのアリエッティ</h2>
+				<h1>Ponyo: Uma Amizade que Veio do Mar</h1>
+				<h2 lang="ja">崖の上のポニョ</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-8.jpg" alt="Poster do Filme O Mundo dos Pequeninos">
+				<img id="poster" src="../posters/poster-12.jpg" alt="Poster do Filme Ponyo: Uma Amizade que Veio do Mar">
 				<br>
 				<br>
-				<p>O Mundo dos Pequeninos é um filme de animação japonês de 2010, sendo a estreia de Hiromasa Yonebayashi na direção. Foi baseado no romance Os Pequeninos Borrowers, de Mary Norton, com roteiro de Hayao Miyazaki e Keiko Niwa e produção do Studio Ghibli.</p>
+				<p>Gake no Ue no Ponyo é um filme de animação japonês que começou a ser escrito pelo famoso Hayao Miyazaki e produzido pelo Studio Ghibli em 2006. A data de estreia no Japão foi 19 de julho de 2008. O filme teve sua estreia no Brasil em 2 de julho de 2010. </p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,11 +96,11 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>95 min</td>
+							<td>101 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Hiromasa Yonebayashi</td>
+							<td>Hayao Miyazaki</td>
 						</tr>	
 						<tr>
 							<th>Produção</th>
@@ -108,15 +108,11 @@
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki<br>Keiko Niwa</td>
+							<td>Hayao Miyazaki</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Mirai Shida<br>Ryunosuke Kamiki<br>Shinobu Otake<br>Keiko Takeshita<br>Tatsuya Fujiwara<br>Tomokazu Miura<br>Kirin Kiki</td>
-						</tr>
-						<tr>
-							<th>Baseado</th>
-							<td>Os Pequeninos Borrowers<br>de Mary Norton</td>
+							<td>Tomoko Yamaguchi<br>Kazushige Nagashima<br>Yuki Amami<br>George Tokoro<br>Yuria Nara<br>Hiroki Doi<br>Rumi Hiiragi<br>Akiko Yano<br>Kazuko Yoshiyuki<br>Tomoko Naraoka</td>
 						</tr>
 						<tr>
 							<th>Gênero</th>
@@ -124,23 +120,27 @@
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Cécile Corbel</td>
+							<td>Joe Hisaishi</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
 							<td>Atsushi Okui</td>
 						</tr>
 						<tr>
+							<th>Direção de arte</th>
+							<td>Noboru Yoshida</td>
+						</tr>
+						<tr>
 							<th>Edição</th>
-							<td>Rie Matsubara</td>
+							<td>Takeshi Seyama</td>
 						</tr>
 						<tr>
 							<th>Companhia(s) produtora(s)</th>
 							<td>Studio Ghibli</td>
 						</tr>
 						<tr>
-							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
-							<td>17 de julho de 2010</td>
+							<th>Lançamento</th>
+							<td>19 de julho de 2008</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
@@ -148,11 +148,11 @@
 						</tr>
 						<tr>
 							<th>Orçamento</th>
-							<td>US$23 milhões</td>
+							<td>¥3,4 bilhões</td>
 						</tr>
 						<tr>
 							<th>Receita</th>
-							<td>US$146 milhões</td>
+							<td>US$202,5 milhões</td>
 						</tr>
 					</tbody>
 				</table>
@@ -160,26 +160,30 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>Nos subúrbios de Tóquio, sob o assoalho de uma casa velha, Arrietty vive em seu minúsculo mundo com a família, fazendo de tudo para manter em segredo a existência de todos. Sobrevivendo como pequenos ladrões, eles conhecem as regras para que nunca sejam percebidos pelos verdadeiros – e grandes – donos da casa. Para isso, procuram manter a desconfiança deles em cima dos gatos e ratos e tomam todos os cuidados possíveis para evitar de serem vistos. Contudo, quando um jovem rapaz se hospeda na casa, a pequenina Arrietty acredita que poderá manter uma amizade com ele, apesar da diferença de tamanhos.</p>
+				<p>Certa manhã, quando brinca na praia, o pequeno Sosuke encontra um peixe vermelho preso num frasco de doce. Sosuke liberta o peixinho do frasco, a quem dá o nome de Ponyo, e promete protegê-lo para sempre. Mas o pai de Ponyo, um feiticeiro que vive no fundo do mar, força o pequeno peixe a regressar às profundezas. Decidida a tornar-se humana, Ponyo foge para reencontrar Sosuke e espalha acidentalmente uma poção mágica pelo oceano, transformando as suas irmãs em ondas gigantes que ameaçam inundar a aldeia de Sosuke. O amor e a responsabilidade, o oceano e a vida, num mundo fantástico onde a magia também faz parte das coisas naturais do dia-a-dia.</p>
+
+				<p>O filme teve sua estreia nos cinemas brasileiros em 2 de julho de 2010. Saiu em DVD e BluRay pela PlayArte com dublagem e legendas em português. Atualmente está disponível junto a mais outros 20 filmes do Studio Ghibli na plataforma de streaming da Netflix.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3 id="Critica">Produção & Crítica</h3>
-				<p>Em 16 de dezembro de 2009, o Studio Ghibli anunciou O Mundo dos Pequeninos como seu filme para o próximo ano. Este filme é baseado no romance Os Pequeninos Borrowers, da escritora britânica Mary Norton. O romance ganhou a Medalha Carnegie pela literatura infantil em 1953 e já havia sido adaptado em dois filmes e uma série de TV na época. Os fundadores do Studio Ghibli, Isao Takahata e Hayao Miyazaki, estavam contemplando uma adaptação deste romance há cerca de 40 anos.</p>
+				<p>O diretor e roteirista do filme, Hayao Miyazaki, disse que o filme é influenciado de maneira abstrata pela história de Hans Christian Andersen, A Pequena Sereia. Juntamente com o diretor de animação Katsuya Kondo e o diretor de arte Noboru Yoshida, Miyazaki planejou um conjunto de objetivos que incluíam usar a animação tradicional inteiramente em Ponyo, buscando as possibilidades de animação e arte sem lutar sob as exigências do cronograma de produção, mostrando a qualidade da obra de arte de Yoshida além de celebrar a inocência e a alegria do universo infantil. A produção do Ponyo começou em maio de 2006, enquanto a animação principal começou em outubro daquele ano.</p>
 
-				<p>No mesmo dia, foi anunciado Hiromasa Yonebayashi como diretor do filme e Hayao Miyazaki como planejador. Yonebayashi trabalhou em algumas das obras do Studio Ghibli, como O Castelo Animado, Ponyo e A Viagem de Chihiro. Ele também foi o diretor reserva de Contos de Terramar.</p>
+				<p>Alguns dos filmes anteriores do Studio Ghibli usavam CGI, mas toda a seção de computação gráfica do estúdio havia fechado antes da produção desse recurso, pois foi decidido que eles queriam se concentrar na animação desenhada à mão. Miyazaki estava intimamente envolvido com a animação desenhada à mão em Ponyo. Ele preferia desenhar o mar e as ondas, e gostava de experimentar como expressar essa parte importante do filme. O nível de desenho detalhado presente no filme resultou em 170.000 imagens individuais – um recorde para um filme de Miyazaki.</p>
+
+				<p>A vila litorânea onde a história se passa é inspirada em Tomonoura, uma cidade real no Parque Nacional de Setonaikai, no Japão, onde Miyazaki esteve em 2005. Algumas das cenas e cenários foram afetados pela ópera Die Walküre de Richard Wagner. A música também faz referência à ópera de Wagner. O personagem de Sosuke é baseado no filho de Miyazaki, Goro Miyazaki, quando ele tinha cinco anos. O nome de Sosuke é retirado do herói no romance The Gate pelo famoso romancista japonês Natsume Soseki.</p>
+
+				<p>Ponyo teve uma entrada no 65º Festival Internacional de Cinema de Veneza. Em 2009, Ponyo ganhou cinco prêmios no 8º anual Tokyo Anime Awards. Os prêmios incluíram “Anime do ano” e “Melhor longa-metragem nacional”. Miyazaki recebeu o prêmio de melhor diretor e melhor roteiro original, e Noboru Yoshida recebeu o prêmio de melhor direção de arte. O filme ganhou os prêmios de Animação do Ano e Melhor Destaque em Música no 32º Prêmio da Academia do Japão.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/0ldESLoQyyP80ynVU2gych?utm_source=generator" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/15rOJIfBtL56saE9EIlocm?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70216227"><img class="icon" alt="Netflix" src="../icons/netflix.png">
-				</a>
-				<a href="https://tv.apple.com/br/movie/arriettys-hemmelige-verden/umc.cmc.4krkqhs0xk33vof1g7w1v3i5n?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
+				<a href="https://www.netflix.com/br/title/70106454"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
 			</div>
 		</div>
@@ -188,7 +192,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
