--- a/html/princesa-mononoke.html
+++ b/html/princesa-mononoke.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Da Colina Kokuriko</title>
+	<title>Princesa Mononoke</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-5.jpg");
+			background-image: url("../covers/cover-15.jpg");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Da Colina Kokuriko</h1>
-				<h2 lang="ja">コクリコ坂から</h2>
+				<h1>Princesa Mononoke</h1>
+				<h2 lang="ja">もののけ姫</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-5.jpg" alt="Poster do Filme Da Colina Kokuriko">
+				<img id="poster" src="../posters/poster-15.webp" alt="Poster do Filme Princesa Mononoke">
 				<br>
 				<br>
-				<p>Da Colina Kokuriko é um filme de animação japonês de 2011 dirigido por Goro Miyazaki, com roteiro de Hayao Miyazaki e Keiko Niwa, produzido pelo Studio Ghibli. Este é o segundo trabalho de Goro Miyazaki para o Studio Ghibli. Sua estreia na direção ocorreu em Contos de Terramar, filme de 2006.</p>
+				<p>Princesa Mononoke é um filme de animação japonês dirigido por Hayao Miyazaki e produzido pelo Studio Ghibli. A data de estreia no Japão foi 12 de julho de 1997 e a estreia no restante do mundo aconteceu a partir de 1999.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,11 +96,11 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>92 min</td>
+							<td>133 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Goro Miyazaki</td>
+							<td>Hayao Miyazaki</td>
 						</tr>	
 						<tr>
 							<th>Produção</th>
@@ -108,23 +108,27 @@
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki<br>Keiko Niwa</td>
+							<td>Hayao Miyazaki</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Masami Nagasawa<br>Junichi Okada<br>Keiko Takeshita<br>Yuriko Ishida<br>Jun Fubuki<br>Takashi Naito<br>Shunsuke Kazama<br>Nao Omori<br>Teruyuki Kagawa</td>
+							<td>Yoji Matsuda<br>Yuriko Ishida<br>Yuko Tanaka<br>Kaoru Kobayashi<br>Masahiko Nishimura<br>Tsunehiko Kamijo<br>Akihiro Miwa<br>Mitsuko Mori<br>Hisaya Morishige</td>
 						</tr>
 						<tr>
-							<th>Baseado</th>
-							<td>Kokuriko-zaka kara<br>por Chizuru Takahashi<br>Tetsuro Sayama</td>
+							<th>Gênero</th>
+							<td>Fantasia</td>
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Satoshi Takebe</td>
+							<td>Joe Hisaishi</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
 							<td>Atsushi Okui</td>
+						</tr>
+						<tr>
+							<th>Direção de arte</th>
+							<td>Satoshi Kuroda<br>Kazuo Oga<br>Yoji Takeshige<br>Naoya Tanaka<br>Nizo Yamamoto</td>
 						</tr>
 						<tr>
 							<th>Edição</th>
@@ -136,7 +140,7 @@
 						</tr>
 						<tr>
 							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
-							<td>16 de julho de 2011</td>
+							<td>12 de julho de 1997</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
@@ -144,11 +148,11 @@
 						</tr>
 						<tr>
 							<th>Orçamento</th>
-							<td>¥2,2 bilhões</td>
+							<td>¥2,1 bilhões</td>
 						</tr>
 						<tr>
 							<th>Receita</th>
-							<td>US$61,5 milhões</td>
+							<td>US$159,4 milhões</td>
 						</tr>
 					</tbody>
 				</table>
@@ -156,30 +160,31 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>Yokohama, 1963. O Japão está se recuperando da devastação da Segunda Guerra Mundial e se preparando para sediar as Olimpíadas. Neste cenário de esperança e mudança, uma amizade começa a florescer entre os estudantes do ensino médio Umi e Shun. Mas um segredo oculto do passado surge para lançar uma sombra sobre o futuro e separá-los.</p>
+				<p>Após enfrentar um deus javali enfurecido, o príncipe Ashitaka é amaldiçoado com um mal que pode matá-lo. Para encontrar a cura, ele decide viajar para longe e acaba se envolvendo numa batalha entre os deuses animais da floresta e os moradores de uma vila de mineiros, que aos poucos estão destruindo a floresta.</p>
 
-				<p>Da Colina Kokuriko não teve estreia no Brasil ou foi lançado em mídia física. A HBO, contudo, chegou a exibir algumas vezes o filme em sua grade de programação. Atualmente a animação está disponível junto a mais outros 20 filmes do Studio Ghibli na plataforma de streaming da Netflix.</p>
+				<p>Princesa Mononoke se passa no final do período Muromachi (aproximadamente 1336 a 1573) do Japão com elementos de fantasia. A história segue o envolvimento do jovem príncipe Emishi Ashitaka em uma luta entre os deuses de uma floresta e os humanos que consomem seus recursos. O termo “Mononoke” não é um nome, mas uma palavra japonesa para espírito ou monstro: seres sobrenaturais que mudam de forma.</p>
 			</div>
 
 			<div class="div-wrap">
-				<h3 id="Critica">Produção</h3>
-				<p>Ambientado na década de 1960, Goro Miyazaki pesquisou inicialmente Yokohama, com a intenção de ser fiel aos detalhes históricos da cidade. No entanto, depois de perceber que “simplesmente encenar algo do tempo pode parecer real o suficiente, mas pode não ser necessariamente bonito”. Miyazaki decidiu mostrar o local como “cintilante e cheio de vida” do ponto de vista dos personagens. Ao projetar o Quartier Latin, Miyazaki trabalhou com os diretores de arte que adicionaram ideias sobre a “mistura de desordem nos muitos cômodos da casa” e tentaram “olhar a arquitetura do edifício, mas também lembrar os anos da faculdade e os desordem e imundície que [Miyazaki] viveu ”</p>
+				<h3 id="Critica">Produção & Crítica</h3>
+				<p>O diretor quis mostrar personagens de grupos párias e minorias oprimidas que raramente aparecem em filmes japoneses. Sua intenção não era criar uma história precisa do Japão Medieval, e sim “retratar o início do conflito aparentemente insolúvel entre o mundo natural e a civilização industrial moderna.” As paisagens que aparecem no filme foram inspiradas em Yakushima. Apesar de ter sido definido durante o período Muromachi, o período real de Princesa Mononoke descreve um “conflito nunca simbólico de três raças proto-japonesas (Jomon, Yamato e Emishi)”. </p>
 
-				<p>Nos anos 60 se viu um aumento crescente do ativismo estudantil e das revoltas no campus no Japão e em outras partes do mundo, que refletiu diretamente em diversas cenas do filme. Em uma entrevista à imprensa dada após o terremoto e tsunami de Tohoku em 2011, foi anunciado que a produção do filme tinha sido afetada pelos apagões ocorridos após o desastre. Apesar do atraso, a equipe conseguiu dar continuidade trabalhando em horários alternativos para finalizar o filme dentro do prazo.</p>
+				<p>Princesa Mononoke foi principalmente desenhado à mão, mas incorpora algum uso de animação por computador em aproximadamente dez por cento do filme. A maior parte do filme é colorida com tinta tradicional, com base nos esquemas de cores projetados por Miyazaki e a colorista Michiyo Yasuda.</p>
+
+				<p>Princesa Mononoke foi o primeiro longa-metragem de animação a ganhar o Prêmio da Academia Japonesa de Melhor Filme. Para a cerimônia do 70º Oscar, foi a candidatura japonesa na categoria Oscar de Melhor Filme em Língua Estrangeira, mas não conseguiu a indicação.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/6clRxNemmlm8kSfIJJtMNF?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/2ZHxPDTCRU5STetdmXeW6p?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70262786"><img class="icon" alt="Netflix" src="../icons/netflix.png">
+				<a href="https://www.netflix.com/br/title/28630857"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
-				<a href="https://tv.apple.com/br/movie/la-colina-de-las-amapolas/umc.cmc.11uuzbwzfxszmzlkqj4m1yobx?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
+				<a href="https://tv.apple.com/br/movie/prinsessa-mononoke/umc.cmc.5sqttudjos4b07rysh0mlc0fl?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
 				</a>
-
 			</div>
 		</div>
 	</main>
@@ -187,8 +192,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
-			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
