--- a/html/sussurros-do-coracao.html
+++ b/html/sussurros-do-coracao.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Studio Ghibli">
 	<meta name="author" content="Crislaney & Fernanda">
 
-	<title>Da Colina Kokuriko</title>
+	<title>Sussurros do Coração</title>
 
 	<!-- Icone -->
 	<link rel="apple-touch-icon" sizes="57x57"   href="../icons/favicon/apple-icon-57x57.png">
@@ -43,7 +43,7 @@
 
 	<style>
 		.div-box{
-			background-image: url("../covers/cover-5.jpg");
+			background-image: url("../covers/cover-14.jpg");
 		}
 	</style>
 
@@ -73,8 +73,8 @@
 				</div>
 			</nav>
 			<div class="texto-cover">
-				<h1>Da Colina Kokuriko</h1>
-				<h2 lang="ja">コクリコ坂から</h2>
+				<h1>Sussurros do Coração</h1>
+				<h2 lang="ja">耳をすませば</h2>
 			</div>
 			
 		</header>
@@ -84,10 +84,10 @@
 	<main>
 		<div class="filme">		
 			<div class="div-wrap">
-				<img id="poster" src="../posters/poster-5.jpg" alt="Poster do Filme Da Colina Kokuriko">
+				<img id="poster" src="../posters/poster-14.png" alt="Poster do Filme Sussurros do Coração">
 				<br>
 				<br>
-				<p>Da Colina Kokuriko é um filme de animação japonês de 2011 dirigido por Goro Miyazaki, com roteiro de Hayao Miyazaki e Keiko Niwa, produzido pelo Studio Ghibli. Este é o segundo trabalho de Goro Miyazaki para o Studio Ghibli. Sua estreia na direção ocorreu em Contos de Terramar, filme de 2006.</p>
+				<p>Sussurros do Coração é um filme de animação japonês de 1995, dirigido por Yoshifumi Kondo e com roteiro de Hayao Miyazaki, baseado no mangá Mimi wo Sumaseba de 1989 de Aoi Hiiragi. O filme posteriormente inspirou parte da história do longa de 2002 do Studio Ghibli, O Reino dos Gatos, que traz personagens como Barão e Muta.</p>
 			</div>
 
 			<div class="div-wrap">
@@ -96,11 +96,11 @@
 					<tbody>
 						<tr>
 							<th>Duração</th>
-							<td>92 min</td>
+							<td>111 min</td>
 						</tr>	
 						<tr>
 							<th>Direção</th>
-							<td>Goro Miyazaki</td>
+							<td>Yoshifumi Kondo</td>
 						</tr>	
 						<tr>
 							<th>Produção</th>
@@ -108,23 +108,27 @@
 						</tr>
 						<tr>
 							<th>Roteiro</th>
-							<td>Hayao Miyazaki<br>Keiko Niwa</td>
+							<td>Hayao Miyazaki</td>
 						</tr>
 						<tr>
 							<th>Elenco</th>
-							<td>Hideaki Anno<br>Masami Nagasawa<br>Junichi Okada<br>Keiko Takeshita<br>Yuriko Ishida<br>Jun Fubuki<br>Takashi Naito<br>Shunsuke Kazama<br>Nao Omori<br>Teruyuki Kagawa</td>
+							<td>Yoko Honna<br>Issei Takahashi<br>Takashi Tachibana<br>Shigeru Muroi<br>Shigeru Tsuyuguchi<br>Keiju Kobayashi</td>
 						</tr>
 						<tr>
-							<th>Baseado</th>
-							<td>Kokuriko-zaka kara<br>por Chizuru Takahashi<br>Tetsuro Sayama</td>
+							<th>Gênero</th>
+							<td>Drama</td>
 						</tr>
 						<tr>
 							<th>Música</th>
-							<td>Satoshi Takebe</td>
+							<td>Yuji Nomi</td>
 						</tr>
 						<tr>
 							<th>Cinematografia</th>
 							<td>Atsushi Okui</td>
+						</tr>
+						<tr>
+							<th>Baseado</th>
+							<td>Mimi o Sumaseba<br>de Aoi Hiiragi</td>
 						</tr>
 						<tr>
 							<th>Edição</th>
@@ -135,20 +139,16 @@
 							<td>Studio Ghibli</td>
 						</tr>
 						<tr>
-							<th>Lançamento <img id="bandeira" alt="Bandeira do Japão" src="../icons/bandeira-japao.png"></th>
-							<td>16 de julho de 2011</td>
+							<th>Lançamento <img id="bandeira" alt="Bandeira do Brasil" src="../icons/bandeira-brasil.png"></th>
+							<td>15 de julho de 1995</td>
 						</tr>
 						<tr>
 							<th>Idioma</th>
 							<td>Japonês</td>
 						</tr>
 						<tr>
-							<th>Orçamento</th>
-							<td>¥2,2 bilhões</td>
-						</tr>
-						<tr>
 							<th>Receita</th>
-							<td>US$61,5 milhões</td>
+							<td>¥3.15 bilhões (Japão)</td>
 						</tr>
 					</tbody>
 				</table>
@@ -156,30 +156,33 @@
 
 			<div class="div-wrap">
 				<h3 id="sinopse">Sinopse</h3>
-				<p>Yokohama, 1963. O Japão está se recuperando da devastação da Segunda Guerra Mundial e se preparando para sediar as Olimpíadas. Neste cenário de esperança e mudança, uma amizade começa a florescer entre os estudantes do ensino médio Umi e Shun. Mas um segredo oculto do passado surge para lançar uma sombra sobre o futuro e separá-los.</p>
+				<p>Shizuku é uma estudante que sonha em ser uma escritora e decide, durante o verão, ler vinte livros. Mas, curiosamente, todas as edições que ela pegou na biblioteca já haviam sido lidas por um tal de Seiji Amasawa.</p>
 
-				<p>Da Colina Kokuriko não teve estreia no Brasil ou foi lançado em mídia física. A HBO, contudo, chegou a exibir algumas vezes o filme em sua grade de programação. Atualmente a animação está disponível junto a mais outros 20 filmes do Studio Ghibli na plataforma de streaming da Netflix.</p>
+				<p>Nos dias seguintes, Shizuku encontra um jovem, mais tarde revelado ser Seiji, que a irrita para provocá-la sobre a música que ela compôs para o clube de literatura o qual faz parte na escola: "Concrete Roads". Ao encontrar um gato andando de trem, Shizuku o segue para descobrir uma loja de antiguidades administrada por Shiro Nishi. Na loja há uma estatueta de gato apelidada de "O Barão". Shizuku está em êxtase por encontrar "um lugar onde as histórias começam" e pergunta a Nishi se ela pode voltar. </p>
 			</div>
 
 			<div class="div-wrap">
-				<h3 id="Critica">Produção</h3>
-				<p>Ambientado na década de 1960, Goro Miyazaki pesquisou inicialmente Yokohama, com a intenção de ser fiel aos detalhes históricos da cidade. No entanto, depois de perceber que “simplesmente encenar algo do tempo pode parecer real o suficiente, mas pode não ser necessariamente bonito”. Miyazaki decidiu mostrar o local como “cintilante e cheio de vida” do ponto de vista dos personagens. Ao projetar o Quartier Latin, Miyazaki trabalhou com os diretores de arte que adicionaram ideias sobre a “mistura de desordem nos muitos cômodos da casa” e tentaram “olhar a arquitetura do edifício, mas também lembrar os anos da faculdade e os desordem e imundície que [Miyazaki] viveu ”</p>
+				<h3 id="Critica">Produção & Música</h3>
+				<p>Durante a produção, os cenários das sequências de fantasia do filme foram desenhados por Naohisa Inoue, que posteriormente fez um curta-metragem para o Studio Ghibli intitulado Iblard Jikan, e a xilogravura do violinista preso foi criada pelo filho de Miyazaki, Keisuke Miyazaki, um escultor profissional.</p>
 
-				<p>Nos anos 60 se viu um aumento crescente do ativismo estudantil e das revoltas no campus no Japão e em outras partes do mundo, que refletiu diretamente em diversas cenas do filme. Em uma entrevista à imprensa dada após o terremoto e tsunami de Tohoku em 2011, foi anunciado que a produção do filme tinha sido afetada pelos apagões ocorridos após o desastre. Apesar do atraso, a equipe conseguiu dar continuidade trabalhando em horários alternativos para finalizar o filme dentro do prazo.</p>
+				<p>A história e os cenários do filme foram baseados em uma locação real que se dá em torno da estação Seiseki-Sakuragaoka na cidade de Tama, Tóquio.</p>
+
+				<p>A música em Sussurros do Coração é um dos pontos mais marcantes do filme. A trilha sonora foi composta por Yuji Nomi. Em alguns momentos, durante o filme, Shizuku traduz a música de John Denver “Take Me Home, Country Roads” para japonês para o clube de coro de sua escola.</p>
+
+				<p>Ela escreve sua própria versão humorística da música japonesa, chamada “Concrete Road”, sobre sua cidade natal no oeste de Tóquio. As músicas foram realmente traduzidas pela filha do produtor Toshio Suzuki, Mamiko, com Hayao Miyazaki escrevendo letras complementares. Essas músicas desempenham um papel chave na história.</p>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Trilha Sonora</h3>
-				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/6clRxNemmlm8kSfIJJtMNF?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+				<iframe style="border-radius:12px; width: 100%; height: 380px;" src="https://open.spotify.com/embed/album/0yOhYn348rz2j3mUne0fpH?utm_source=generator"  allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 			</div>
 
 			<div class="div-wrap">
 				<h3>Assista em</h3>
-				<a href="https://www.netflix.com/br/title/70262786"><img class="icon" alt="Netflix" src="../icons/netflix.png">
+				<a href="https://www.netflix.com/br/title/70045021"><img class="icon" alt="Netflix" src="../icons/netflix.png">
 				</a>
-				<a href="https://tv.apple.com/br/movie/la-colina-de-las-amapolas/umc.cmc.11uuzbwzfxszmzlkqj4m1yobx?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
+				<a href="https://tv.apple.com/br/movie/szept-serca/umc.cmc.36pa34qc4qalm30euvvnelzi6?action=play"><img class="icon" alt="AppleTv" src="../icons/apple.png">
 				</a>
-
 			</div>
 		</div>
 	</main>
@@ -187,8 +190,7 @@
 	<footer>
 		<div id="rodape">
 			<button id="scroll-up"><span id="seta">&#10140;</span></button>
-			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">
-			
+			<img src="../icons/logo1.png" id="imagem-logo2" alt="susuwatari">			
 		</div>
 		<div id="texto-rodape">
 			<p>Textos e Informações retirados da Wikipedia e do site Studio Ghibli Brasil | Criado por Fernanda & Crislaney | 2022</p>
